Ignore Emacs cache files.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@
 
 # Specific sub directories to ignore
 emacs/emacs.d.symlink/site-lisp/*
+emacs/emacs.d.symlink/.emacs-places
+emacs/emacs.d.symlink/.eshell/history
+emacs/emacs.d.symlink/.eshell/lastdir
+emacs/emacs.d.symlink/.recentf
+emacs/emacs.d.symlink/slime-history.eld
