--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@
 
 # Vim creates swapfiles for open files; ignore these
 .*.swp
+.*.swo
 
 # Specific sub directories to ignore
 emacs/emacs.d.symlink/site-lisp/*
