Changes to Emacs for version 24.
Using solarized-light color theme.
Face changes to custom.el
ignoring elpa/ directory.
 (though would be nice to track installed
  packages across machines)

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 *.eld
 
 # Specific sub directories to ignore
+emacs/emacs.d.symlink/elpa/*
 emacs/emacs.d.symlink/site-lisp/*
 emacs/emacs.d.symlink/.emacs-places
 emacs/emacs.d.symlink/.eshell/history
