Ignore emacs session files

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 
 # Specific sub directories to ignore
 emacs/emacs.d.symlink/elpa/*
+emacs/emacs.d.symlink/session.*
 emacs/emacs.d.symlink/site-lisp/*
 emacs/emacs.d.symlink/.emacs-places
 emacs/emacs.d.symlink/.eshell/history
