Don't store emacs package cookies.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ emacs/emacs.d.symlink/.emacs-places
 emacs/emacs.d.symlink/.eshell/history
 emacs/emacs.d.symlink/.eshell/lastdir
 emacs/emacs.d.symlink/.recentf
+emacs/emacs.d.symlink/url/cookies
 
 # Vim
 
