Don't save Dunnet save.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ emacs/emacs.d.symlink/.eshell/history
 emacs/emacs.d.symlink/.eshell/lastdir
 emacs/emacs.d.symlink/.recentf
 emacs/emacs.d.symlink/url/cookies
+emacs/emacs.d.symlink/dunnet.sav
 
 # Vim
 
