Cleanup emacs aux files

--- a/.gitignore
+++ b/.gitignore
@@ -16,15 +16,11 @@
 *.eld
 
 # Specific sub directories to ignore
-emacs/emacs.d.symlink/elpa/*
+emacs/emacs.d.symlink/elpa
+emacs/emacs.d.symlink/site-lisp
+emacs/emacs.d.symlink/tmp
 emacs/emacs.d.symlink/session.*
-emacs/emacs.d.symlink/site-lisp/*
-emacs/emacs.d.symlink/.emacs-places
-emacs/emacs.d.symlink/.eshell/history
-emacs/emacs.d.symlink/.eshell/lastdir
-emacs/emacs.d.symlink/.recentf
 emacs/emacs.d.symlink/url/cookies
-emacs/emacs.d.symlink/dunnet.sav
 
 # Vim
 
