--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "vim/vim.symlink/bundle/nerdtree"]
 	path = vim/vim.symlink/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "emacs/emacs.d.symlink/site-lisp/magit"]
+	path = emacs/emacs.d.symlink/site-lisp/magit
+	url = https://github.com/magit/magit.git
