--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,9 @@
 	path = spacemacs/emacs.d.symlink
 	url = https://github.com/syl20bnr/spacemacs
 	branch = develop
+[submodule "vim/vim.symlink/bundle/vim-colors-solarized"]
+	path = vim/vim.symlink/bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
+[submodule "vim/vim.symlink/bundle/vim-airline"]
+	path = vim/vim.symlink/bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
